@@ -1,13 +1,10 @@
-
-# This file was automatically generated by Dist::Zilla::Plugin::MakeMaker v5.031.
+# This file was automatically generated by Dist::Zilla::Plugin::MakeMaker v5.034.
 use strict;
 use warnings;
 
 use 5.006;
 
 use ExtUtils::MakeMaker;
-
-
 
 my %WriteMakefileArgs = (
   "ABSTRACT" => "Template Toolkit Renderer Mojolicious Plugin",
@@ -36,7 +33,7 @@ my %WriteMakefileArgs = (
     "Test::More" => 0,
     "Test::Most" => 0
   },
-  "VERSION" => "1.05",
+  "VERSION" => "1.06",
   "test" => {
     "TESTS" => "t/*.t"
   }
@@ -70,6 +67,3 @@ delete $WriteMakefileArgs{CONFIGURE_REQUIRES}
   unless eval { ExtUtils::MakeMaker->VERSION(6.52) };
 
 WriteMakefile(%WriteMakefileArgs);
-
-
-
