@@ -4,7 +4,7 @@ Mojolicious::Plugin::ToolkitRenderer - Template Toolkit Renderer Mojolicious Plu
 
 # VERSION
 
-version 1.05
+version 1.06
 
 [![Build Status](https://travis-ci.org/gryphonshafer/Mojo-Plugin-Toolkit.svg)](https://travis-ci.org/gryphonshafer/Mojo-Plugin-Toolkit)
 [![Coverage Status](https://coveralls.io/repos/gryphonshafer/Mojo-Plugin-Toolkit/badge.png)](https://coveralls.io/r/gryphonshafer/Mojo-Plugin-Toolkit)
@@ -130,6 +130,8 @@ You can also look for additional information at:
 - [AnnoCPAN](http://annocpan.org/dist/Mojolicious-Plugin-ToolkitRenderer)
 - [Travis CI](https://travis-ci.org/gryphonshafer/Mojo-Plugin-Toolkit)
 - [Coveralls](https://coveralls.io/r/gryphonshafer/Mojo-Plugin-Toolkit)
+- [CPANTS](http://cpants.cpanauthors.org/dist/Mojo-Plugin-Toolkit)
+- [CPAN Testers](http://www.cpantesters.org/distro/M/Mojo-Plugin-Toolkit.html)
 
 # AUTHOR
 
